z-index fixed for alert

--- a/client/src/components/layout/css/Alert.css
+++ b/client/src/components/layout/css/Alert.css
@@ -1,3 +1,7 @@
+.alert{
+    z-index: 99;
+}
+
 .alert button:focus{
     outline: none;
     box-shadow: none;
